# esercizi-rdc

./: Makefile  NA01.md  NA02.md  NA03.md  NA04.md  NSD01.md  README.md
Esercizi/: .gitignore  CMakeLists.txt  README.txt  build.sh  clean.sh  format.sh
Esercizi/NSD01/1_asta_telematica/: CMakeLists.txt  client.c  client_utilities.c  client_utilities.h  constants.h  server.c  server_utilities.c  server_utilities.h  utilities.c  utilities.h
Esercizi/NSD01/2_gara_podistica/: CMakeLists.txt  client.c  constants.h  database.c  database.h  runner.c  runner.h  server.c  utilities.c
Esercizi/NSD01/3_gara_podistica_parallelo/: CMakeLists.txt  parallel_check.sh  server.c  utilities.c
Esercizi/NSD01/4_mastermind/: CMakeLists.txt  client.c  constants.h  utilities.h
Esercizi/NSD01/runner_db/: CMakeLists.txt
Esercizi/NSD01/runner_db/include/runnerdb/: database.h  runner.h
Esercizi/NSD01/runner_db/src/: database.c
Esercizi/lib/liblog/: CMakeLists.txt
Esercizi/lib/liblog/include/liblog/: color.h  log.h
Esercizi/lib/libmastermind/: CMakeLists.txt
Esercizi/lib/libmastermind/include/libmastermind/: mastermind_solver.h
Esercizi/lib/libmastermind/src/: mastermind_solver.c  test.c
Esercizi/lib/libringbuffer/: CMakeLists.txt
Esercizi/lib/libringbuffer/include/libringbuffer/: ring_buffer.h
Esercizi/lib/libringbuffer/src/: ring_buffer.c
Esercizi/lib/log/: CMakeLists.txt
Esercizi/lib/log/include/log/: color.h  log.h
Esercizi/lib/mastermind/: CMakeLists.txt
Esercizi/lib/mastermind/include/mastermind/: mastermind_solver.h
Esercizi/lib/mastermind/src/: mastermind_solver.c  test.c
Esercizi/lib/mudpsocket/: CMakeLists.txt
Esercizi/lib/mudpsocket/src/: mudpsocketlib.c
Esercizi/lib/mudpsocketlib/: CMakeLists.txt
Esercizi/lib/mudpsocketlib/include/mudpsocketlib/: mudpsocketlib.h
Esercizi/lib/rawsocket/: CMakeLists.txt
Esercizi/lib/rawsocket/include/rawsocket/: rawsocketlib.h
Esercizi/lib/rawsocket/src/: rawsocketlib.c
Esercizi/lib/rawsocketlib/: CMakeLists.txt
Esercizi/lib/ringbuffer/: CMakeLists.txt
Esercizi/lib/ringbuffer/include/ringbuffer/: ring_buffer.h
Esercizi/lib/ringbuffer/src/: ring_buffer.c
Esercizi/lib/tcpsocket/: CMakeLists.txt
Esercizi/lib/tcpsocket/src/: tcpsocketlib.c
Esercizi/lib/tcpsocketlib/: CMakeLists.txt
Esercizi/lib/tcpsocketlib/src/: tcpsocketlib.c
Esercizi/lib/udpsocket/: CMakeLists.txt
Esercizi/lib/udpsocket/src/: udpsocketlib.c
Esercizi/lib/udpsocketlib/: CMakeLists.txt
Esercizi/lib/udpsocketlib/include/udpsocketlib/: udpsocketlib.h
Esercizi/lib/udpsocketlib/src/: udpsocketlib.c
NSD01/1_asta_telematica/: Makefile  asta_telematica  client  main.c  server  server.c
lib/socketlib/: makeall.bat  makemudpexample.bat  makerawexample.bat  maketcpexample.bat  makeudpexample.bat  mudpsocketlib.c  mudpsocketmain.c  rawsocketlib.c  rawsocketmain.c  socketlib.txt  tcpsocketmain.c  udpsocketmain.c
